--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Sina Vafadar <snvfdr@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "hello-ethernaut": "yarn hardhat test ./test/00-hello-ethernaut.test.js"
+    "hello-ethernaut": "yarn hardhat test ./test/00-hello-ethernaut.test.js",
+    "fallback": "yarn hardhat test ./test/01-fallback.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
