Solve Delegation challenge

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fallout": "yarn hardhat test ./test/02-fallout.test.js",
     "coin-flip": "yarn hardhat test ./test/03-coin-flip.test.js",
     "telephone": "yarn hardhat test ./test/04-telephone.test.js",
-    "token": "yarn hardhat test ./test/05-token.test.js"
+    "token": "yarn hardhat test ./test/05-token.test.js",
+    "delegation": "yarn hardhat test ./test/06-delegation.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
