--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "telephone": "yarn hardhat test ./test/04-telephone.test.js",
     "token": "yarn hardhat test ./test/05-token.test.js",
     "delegation": "yarn hardhat test ./test/06-delegation.test.js",
-    "force": "yarn hardhat test ./test/07-force.test.js"
+    "force": "yarn hardhat test ./test/07-force.test.js",
+    "vault": "yarn hardhat test ./test/08-vault.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
     "@nomicfoundation/hardhat-chai-matchers": "1.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
