--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "token": "yarn hardhat test ./test/05-token.test.js",
     "delegation": "yarn hardhat test ./test/06-delegation.test.js",
     "force": "yarn hardhat test ./test/07-force.test.js",
-    "vault": "yarn hardhat test ./test/08-vault.test.js"
+    "vault": "yarn hardhat test ./test/08-vault.test.js",
+    "king": "yarn hardhat test ./test/09-king.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
