Implement elevator challenge

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "force": "yarn hardhat test ./test/07-force.test.js",
     "vault": "yarn hardhat test ./test/08-vault.test.js",
     "king": "yarn hardhat test ./test/09-king.test.js",
-    "reentrancy": "yarn hardhat test ./test/10-reentrancy.test.js"
+    "reentrancy": "yarn hardhat test ./test/10-reentrancy.test.js",
+    "elevator": "yarn hardhat test ./test/11-elevator.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
