--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vault": "yarn hardhat test ./test/08-vault.test.js",
     "king": "yarn hardhat test ./test/09-king.test.js",
     "reentrancy": "yarn hardhat test ./test/10-reentrancy.test.js",
-    "elevator": "yarn hardhat test ./test/11-elevator.test.js"
+    "elevator": "yarn hardhat test ./test/11-elevator.test.js",
+    "privacy": "yarn hardhat test ./test/12-privacy.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
