--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "reentrancy": "yarn hardhat test ./test/10-reentrancy.test.js",
     "elevator": "yarn hardhat test ./test/11-elevator.test.js",
     "privacy": "yarn hardhat test ./test/12-privacy.test.js",
-    "gatekeeper-one": "yarn hardhat test ./test/13-gatekeeper-one.test.js"
+    "gatekeeper-one": "yarn hardhat test ./test/13-gatekeeper-one.test.js",
+    "gatekeeper-two": "yarn hardhat test ./test/14-gatekeeper-two.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
