--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "elevator": "yarn hardhat test ./test/11-elevator.test.js",
     "privacy": "yarn hardhat test ./test/12-privacy.test.js",
     "gatekeeper-one": "yarn hardhat test ./test/13-gatekeeper-one.test.js",
-    "gatekeeper-two": "yarn hardhat test ./test/14-gatekeeper-two.test.js"
+    "gatekeeper-two": "yarn hardhat test ./test/14-gatekeeper-two.test.js",
+    "naught-coin": "yarn hardhat test ./test/15-naught-coin.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
