--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gatekeeper-one": "yarn hardhat test ./test/13-gatekeeper-one.test.js",
     "gatekeeper-two": "yarn hardhat test ./test/14-gatekeeper-two.test.js",
     "naught-coin": "yarn hardhat test ./test/15-naught-coin.test.js",
-    "preservation": "yarn hardhat test ./test/16-preservation.test.js"
+    "preservation": "yarn hardhat test ./test/16-preservation.test.js",
+    "recovery": "yarn hardhat test ./test/17-recovery.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
