--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "preservation": "yarn hardhat test ./test/16-preservation.test.js",
     "recovery": "yarn hardhat test ./test/17-recovery.test.js",
     "magic-number": "yarn hardhat test ./test/18-magic-number.test.js",
-    "alien-codex": "yarn hardhat test ./test/19-alien-codex.test.js"
+    "alien-codex": "yarn hardhat test ./test/19-alien-codex.test.js",
+    "denial": "yarn hardhat test ./test/20-denial.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
