--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "magic-number": "yarn hardhat test ./test/18-magic-number.test.js",
     "alien-codex": "yarn hardhat test ./test/19-alien-codex.test.js",
     "denial": "yarn hardhat test ./test/20-denial.test.js",
-    "shop": "yarn hardhat test ./test/21-shop.test.js"
+    "shop": "yarn hardhat test ./test/21-shop.test.js",
+    "dex": "yarn hardhat test ./test/22-dex.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
