Solve Puzzle Wallet challenge

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "denial": "yarn hardhat test ./test/20-denial.test.js",
     "shop": "yarn hardhat test ./test/21-shop.test.js",
     "dex": "yarn hardhat test ./test/22-dex.test.js",
-    "dex-two": "yarn hardhat test ./test/23-dex-two.test.js"
+    "dex-two": "yarn hardhat test ./test/23-dex-two.test.js",
+    "puzzle-wallet": "yarn hardhat test ./test/24-puzzle-wallet.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
