Solve Double Entry Point challenge

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dex": "yarn hardhat test ./test/22-dex.test.js",
     "dex-two": "yarn hardhat test ./test/23-dex-two.test.js",
     "puzzle-wallet": "yarn hardhat test ./test/24-puzzle-wallet.test.js",
-    "motorbike": "yarn hardhat test ./test/25-motorbike.test.js"
+    "motorbike": "yarn hardhat test ./test/25-motorbike.test.js",
+    "double-entry-point": "yarn hardhat test ./test/26-double-entry-point.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
