--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dex-two": "yarn hardhat test ./test/23-dex-two.test.js",
     "puzzle-wallet": "yarn hardhat test ./test/24-puzzle-wallet.test.js",
     "motorbike": "yarn hardhat test ./test/25-motorbike.test.js",
-    "double-entry-point": "yarn hardhat test ./test/26-double-entry-point.test.js"
+    "double-entry-point": "yarn hardhat test ./test/26-double-entry-point.test.js",
+    "good-samaritan": "yarn hardhat test ./test/27-good-samaritan.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
