--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "puzzle-wallet": "yarn hardhat test ./test/24-puzzle-wallet.test.js",
     "motorbike": "yarn hardhat test ./test/25-motorbike.test.js",
     "double-entry-point": "yarn hardhat test ./test/26-double-entry-point.test.js",
-    "good-samaritan": "yarn hardhat test ./test/27-good-samaritan.test.js"
+    "good-samaritan": "yarn hardhat test ./test/27-good-samaritan.test.js",
+    "gatekeeper-three": "yarn hardhat test ./test/28-gatekeeper-three.test.js"
   },
   "devDependencies": {
     "@chainlink/contracts": "0.4.1",
